fixed dark mode

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,8 +1,6 @@
 body, html {
     margin: 0;
     padding: 0;
-    background-color: white;
-    color: black;
     font-size: 25px;
     max-height: 160%;
     font-family: 'Inter', sans-serif;
